<resources>
    <string name="app_name">E-Commerce Assignment</string>

    //Nav Menu
    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="settings">Settings</string>

    //Fragment Products
    <string name="search_hint">Search with name or category</string>
    <string name="add_new_product">Add new product</string>

    //Activity Dashboard
    <string name="customer">Customer</string>
    <string name="admin">Admin</string>

    //Activity Details
    <string name="add_to_cart">Add to Cart</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="dummy_pinned_text">6,300+ People pinned this</string>
    <string name="have_coupon">Have a coupon code? Apply here 👇</string>
    <string name="dummy_coupon">DSFRXA</string>
    <string name="available">Available</string>
    <string name="one">1</string>
    <string name="dollar_symbol">$</string>

    //Fragment Add Product
    <string name="hint_product_name">Enter product name</string>
    <string name="hint_product_category">Enter product category</string>
    <string name="hint_product_price">Enter product price</string>
    <string name="hint_product_description">Enter product description</string>
    <string name="add_product">Add Product</string>

    //Common
    <string name="no_product_found">No Product Found</string>

    //Settings Fragment
    <string name="theme_hint">Enable Dark Mode</string>
</resources>