<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".view.dashboard.tabs.adminArea.addProduct.AddProductFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/image_card"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_add_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image_placeholder"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/et_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/ripple_stroke_main_5"
                    android:fontFamily="@font/regular"
                    android:hint="@string/hint_product_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/colorDarkGrey"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintTop_toBottomOf="@id/image_card" />

                <EditText
                    android:id="@+id/et_product_category"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ripple_stroke_main_5"
                    android:fontFamily="@font/regular"
                    android:hint="@string/hint_product_category"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/colorDarkGrey"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintTop_toBottomOf="@id/et_product_name" />

                <EditText
                    android:id="@+id/et_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ripple_stroke_main_5"
                    android:fontFamily="@font/regular"
                    android:hint="@string/hint_product_price"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/colorDarkGrey"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintTop_toBottomOf="@id/et_product_category" />

                <EditText
                    android:id="@+id/et_product_description"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ripple_stroke_main_5"
                    android:fontFamily="@font/regular"
                    android:gravity="top"
                    android:hint="@string/hint_product_description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minHeight="@dimen/_100sdp"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/colorDarkGrey"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintTop_toBottomOf="@id/et_product_price" />

                <TextView
                    android:id="@+id/btn_add_product"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/ripple_bg_main_5"
                    android:fontFamily="@font/bold"
                    android:gravity="center"
                    android:text="@string/add_product"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@id/et_product_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>