<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.saadahmedsoft.e_commerce_assignment.services.model.Product" />

        <variable
            name="quantityVar"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".view.dashboard.tabs.details.DetailsActivity">

        <include
            android:id="@+id/app_toolbar"
            layout="@layout/app_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_corner_radius="@dimen/_5sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/bg_main_5"
                    android:fontFamily="@font/regular"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingEnd="@dimen/_7sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:text="@{product.category}"
                    android:textColor="@color/static_white"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="@id/btn_favorite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/btn_favorite" />

                <ImageView
                    android:id="@+id/btn_favorite"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/ripple_stroke_circle"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_favorite_border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_image"
                    app:tint="@color/colorRed"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/bold"
                    android:text="@{product.name}"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintTop_toBottomOf="@id/btn_favorite"
                    app:layout_goneMarginStart="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    android:text="@{product.description}"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintTop_toBottomOf="@id/product_name"
                    app:layout_goneMarginStart="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/txt_currency_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/bold"
                    android:text="@string/dollar_symbol"
                    android:textColor="@color/static_main"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintBottom_toBottomOf="@id/color_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/color_layout" />

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:fontFamily="@font/bold"
                    android:text="@{product.price}"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintBottom_toBottomOf="@id/color_layout"
                    app:layout_constraintStart_toEndOf="@id/txt_currency_symbol"
                    app:layout_constraintTop_toTopOf="@id/color_layout" />

                <LinearLayout
                    android:id="@+id/color_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_description">

                    <RelativeLayout
                        android:layout_width="@dimen/_27sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/ripple_stroke_circle">

                        <View
                            android:layout_width="@dimen/_22sdp"
                            android:layout_height="@dimen/_22sdp"
                            android:layout_centerInParent="true"
                            android:background="@drawable/circle_green" />

                    </RelativeLayout>

                    <View
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:background="@drawable/circle_orange" />

                    <View
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:background="@drawable/circle_blue" />

                </LinearLayout>

                <View
                    android:id="@+id/bar_top"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:background="@color/colorLightGrey"
                    app:layout_constraintTop_toBottomOf="@id/color_layout" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/img1"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/order_img_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bar_top"
                    app:riv_oval="true" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/img2"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/order_img_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bar_top"
                    app:riv_oval="true" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/img3"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/order_img_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bar_top"
                    app:riv_oval="true" />

                <TextView
                    android:id="@+id/dummy_text_pinned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/medium"
                    android:text="@string/dummy_pinned_text"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="@id/img3"
                    app:layout_constraintStart_toEndOf="@id/img3"
                    app:layout_constraintTop_toTopOf="@id/img3" />

                <View
                    android:id="@+id/bar_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:background="@color/colorLightGrey"
                    app:layout_constraintTop_toBottomOf="@id/img3" />

                <TextView
                    android:id="@+id/have_coupon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/medium"
                    android:text="@string/have_coupon"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bar_bottom" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_coupon"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/stroke_grey_5"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@id/have_coupon">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="@string/dummy_coupon"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:fontFamily="@font/medium"
                        android:text="@string/available"
                        android:textColor="@color/static_main"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintBottom_toBottomOf="@id/ic_check"
                        app:layout_constraintEnd_toStartOf="@id/ic_check"
                        app:layout_constraintTop_toTopOf="@id/ic_check" />

                    <ImageView
                        android:id="@+id/ic_check"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:src="@drawable/ic_check_circle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/static_main"
                        tools:ignore="ContentDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_67sdp"
                    app:layout_constraintTop_toBottomOf="@id/layout_coupon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/btn_decrease"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ripple_stroke_main_5"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/static_main"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/bold"
                android:text="@{quantityVar}"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/btn_decrease"
                app:layout_constraintStart_toEndOf="@id/btn_decrease"
                app:layout_constraintTop_toTopOf="@id/btn_decrease" />

            <ImageView
                android:id="@+id/btn_increase"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/ripple_bg_main_5"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/quantity"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/static_white"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/btn_add_to_cart"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/ripple_bg_main_5"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/add_to_cart"
                android:textColor="@color/static_white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>